kubernetes/apps/forgejo/forgejo/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  namespace: forgejo
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - "forgejo.${SECRET_DOMAIN_INTERNAL}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: forgejo-http
          port: 3000
